--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>My Bio Page</title>
 
     <!--Header Placeholder-->
-    <header>Eri M.</header>
+    <header><h1>Eri M.</h1></header>
+<br>
 
 </head>
 
@@ -41,7 +42,7 @@
                 <thread>
                     <tr>
                         <th>Favorite Movies</th>
-                        <th>Favorite Songs/th>
+                        <th>Favorite Songs</th>
                         <th>Favorite Activities</th>
                     </tr>
                 </thread>
